--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_VERBOSE_MAKEFILE ON)
 
-project(hitokoto-desktop-ng LANGUAGES CXX)
+project(hitokoto-desktop-ng VERSION 0.1.0 LANGUAGES CXX)
 
 include_directories(include)
 add_executable(${PROJECT_NAME} main.cpp resources/systray.qrc
@@ -18,8 +18,10 @@ add_executable(${PROJECT_NAME} main.cpp resources/systray.qrc
         src/conf.cpp
 )
 
-find_package(Qt6 REQUIRED COMPONENTS Core Gui Widgets Multimedia)
-target_link_libraries(${PROJECT_NAME} PRIVATE Qt6::Core Qt6::Gui Qt6::Widgets Qt6::Multimedia)
+set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME "Hitokoto Desktop NG")
+
+find_package(Qt6 REQUIRED COMPONENTS Core Gui Widgets)
+target_link_libraries(${PROJECT_NAME} PRIVATE Qt6::Core Qt6::Gui Qt6::Widgets)
 
 find_package(CURL REQUIRED)
 target_link_libraries(${PROJECT_NAME} PRIVATE CURL::libcurl)
@@ -33,4 +35,24 @@ target_link_libraries(${PROJECT_NAME} PRIVATE tinyxml2::tinyxml2)
 
 set(${PROJECT_NAME}_resource_files "resources/logo.png" "resources/LXGWWenKaiMono-Regular.ttf")
 qt_add_resources(${PROJECT_NAME} "${PROJECT_NAME}" PREFIX "/" FILES ${${PROJECT_NAME}_resource_files})
-set_target_properties(${PROJECT_NAME} PROPERTIES WIN32_EXECUTABLE TRUE MACOSX_BUNDLE TRUE)
+set_target_properties(${PROJECT_NAME} PROPERTIES
+        ${BUNDLE_ID_OPTION}
+        MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
+        MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
+        MACOSX_BUNDLE TRUE
+        WIN32_EXECUTABLE TRUE
+)
+
+include(GNUInstallDirs)
+qt_finalize_executable(${PROJECT_NAME})
+install(TARGETS ${PROJECT_NAME}
+        BUNDLE DESTINATION .
+        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+)
+
+add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy_if_different
+        "${CMAKE_CURRENT_SOURCE_DIR}/resources/icon.icns"
+        "$<TARGET_BUNDLE_DIR:${PROJECT_NAME}>/Contents/Resources/icon.icns"
+)
